--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap");
+
+.instrument-serif-regular {
+  font-family: "Instrument Serif", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.instrument-serif-regular-italic {
+  font-weight: 400;
+  font-style: italic;
+}
+
+* {
+  font-family: "Instrument Serif", serif;
+}
